// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`schema for eligibleEprdAndFtcd 1`] = `
{
  "caseNotes": {},
  "eligibleCriteria": {
    "custodyLevelIsMinimum": {
      "custodyLevel": "MINIMUM",
    },
    "incarcerationWithin18MonthsOfEprdAnd15YearsOfFtcd": {
      "fullTermCompletionDate": 2022-12-16T00:00:00.000Z,
      "minTermCompletionDate": 2022-05-16T00:00:00.000Z,
    },
    "notServingForSexualOffense": null,
    "usIdNoAbsconsionEscapeAndEludingPoliceOffensesWithin10Years": null,
    "usIdNotDetainersForXcrcAndCrc": null,
  },
  "externalId": "ID_RES003",
  "ineligibleCriteria": {},
  "isAlmostEligible": false,
  "isEligible": true,
  "metadata": {},
  "stateCode": "US_ID",
}
`;

exports[`schema for eligibleFtcdOnly 1`] = `
{
  "caseNotes": {},
  "eligibleCriteria": {
    "custodyLevelIsMinimum": {
      "custodyLevel": "MINIMUM",
    },
    "incarcerationWithin18MonthsOfFtcdOrTpd": {
      "fullTermCompletionDate": 2022-10-16T00:00:00.000Z,
      "groupProjectedParoleReleaseDate": null,
    },
    "notServingForSexualOffense": null,
    "usIdNoAbsconsionEscapeAndEludingPoliceOffensesWithin10Years": null,
    "usIdNotDetainersForXcrcAndCrc": null,
  },
  "externalId": "ID_RES002",
  "ineligibleCriteria": {},
  "isAlmostEligible": false,
  "isEligible": true,
  "metadata": {},
  "stateCode": "US_ID",
}
`;

exports[`schema for lifeSentence 1`] = `
{
  "caseNotes": {},
  "eligibleCriteria": {
    "custodyLevelIsMinimum": {
      "custodyLevel": "MINIMUM",
    },
    "incarcerationWithin1YearOfTpdAndLifeSentence": {
      "eligibleOffenses": [
        "I00-0000",
        "I11-1111",
      ],
      "groupProjectedParoleReleaseDate": 2022-08-16T00:00:00.000Z,
    },
    "notServingForSexualOffense": null,
    "usIdNoAbsconsionEscapeAndEludingPoliceOffensesWithin10Years": null,
    "usIdNotDetainersForXcrcAndCrc": null,
  },
  "externalId": "ID_RES005",
  "ineligibleCriteria": {},
  "isAlmostEligible": false,
  "isEligible": true,
  "metadata": {},
  "stateCode": "US_ID",
}
`;

exports[`schema for tpdRecord 1`] = `
{
  "caseNotes": {},
  "eligibleCriteria": {
    "custodyLevelIsMinimum": {
      "custodyLevel": "MINIMUM",
    },
    "incarcerationWithin18MonthsOfFtcdOrTpd": {
      "fullTermCompletionDate": null,
      "groupProjectedParoleReleaseDate": 2022-10-16T00:00:00.000Z,
    },
    "notServingForSexualOffense": null,
    "usIdNoAbsconsionEscapeAndEludingPoliceOffensesWithin10Years": null,
    "usIdNotDetainersForXcrcAndCrc": null,
  },
  "externalId": "ID_RES004",
  "ineligibleCriteria": {},
  "isAlmostEligible": false,
  "isEligible": true,
  "metadata": {},
  "stateCode": "US_ID",
}
`;
